--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   <style>
     body {
     background-color: red; /* Provjera rada pozadine */
-    background-image: url('https://raw.githubusercontent.com/zviznemte/HRTVR/main/background.jpg');
+    background-image: url('https://zviznemte.github.io/HRTVR/background.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
